---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] private.sh connect --protocol http -v"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mInvalid option for [33mprotocol[31m: [33mhttp[31m[0m

Connect to the metaverse

[4mAlias:[0m c

[4mUsage:[0m
  connect -p|--protocol <PROTOCOL> [OPTIONS] HOST
  connect -h|--help

[4mArguments:[0m
  HOST
    Hostname to connect to
    [@required]

[4mOptions:[0m
  -p --protocol <PROTOCOL>
    Protocol to use for connection
    [@choices ftp|ssh]
  -v --verbose
    Verbose output
  -h --help
    Print help
